ListPartial: IE11 wrapping fix. (#40)
* ListPartial: IE11 wrapping fix.

* ListPartial: README update.

--- a/layouts/list-partial/src/ListPartial.scss
+++ b/layouts/list-partial/src/ListPartial.scss
@@ -15,6 +15,7 @@
 }
 
 .filterComponent {
+  flex: 1; // ie11
   flex-grow: 1;
 }
 
